Added Event URL to photographer dashboard

--- a/src/app/components/event-photographer/event-photographer.component.html
+++ b/src/app/components/event-photographer/event-photographer.component.html
@@ -113,6 +113,10 @@
             <label class="active">{{ 'LABELS.EVENT_PASSWORD' | translate }}</label>
           </div>
 
+          <div class="md-form">
+            <input class="text" id="event_url" type="text" length="120" mdbCharCounter formControlName="id" disabled>
+            <label class="active">{{ 'LABELS.EVENT_URL' | translate }}</label>
+          </div>
 
           <div class="row no-gutters justify-content-start" style="align-items: center">
             <div class="col-4"></div>
