--- a/src/app/pages/photographer-page/photographer-page.component.scss
+++ b/src/app/pages/photographer-page/photographer-page.component.scss
@@ -1,5 +1,3 @@
-
-
 .authorData {
   text-align: left;
   padding-top: 20px;
@@ -11,39 +9,36 @@
   padding-bottom: 10px;
 }
 
-.tab-hdg{
+.tab-hdg {
   font-weight: bold;
 }
 
-.rating{
- font-weight: bold;
- margin-top: 20px
+.rating {
+  font-weight: bold;
+  margin-top: 20px;
 }
 
-.write{
-  font-size:30px !important;
+.write {
+  font-size: 30px !important;
   margin-bottom: 15px;
 }
 
-.grey-gradient {
-  // background: linear-gradient(40deg, #e8eaf6, #fafafa);
-  // background: linear-gradient(40deg, #b2dfdb, #00796b); // chiara türkis
-  // background: linear-gradient(40deg, #fff176, #ffa726); // yellow-orange
+.col-md-4 {
+  padding: 15px;
 }
 
-  .white{
-    color: white;
-    background-color: white;
-    border-color: white;
-  }
+.white {
+  color: white;
+  background-color: white;
+  border-color: white;
+}
 
-  .form-check-inline{
-    margin-right: 20px;
-  }
+.form-check-inline {
+  margin-right: 20px;
+}
 
-td{
+td {
   border: none;
- 
 }
 
 #centered {
@@ -65,9 +60,10 @@ td{
 .indigo-gradient {
   background: linear-gradient(80deg, #9dafff, rgb(104, 129, 253));
 }
-#testimonials{
-  img{
-    width:10%;
-    height:10%;
+
+#testimonials {
+  img {
+    width: 10%;
+    height: 10%;
   }
 }
