--- a/src/app/pages/payment-success-page/payment-success-page.component.html
+++ b/src/app/pages/payment-success-page/payment-success-page.component.html
@@ -1,5 +1,10 @@
-<div class="row mt-5 pt-5">
-  <div class="col text-center">
-    <h1>{{ 'TEXTS.PAYMENT_SUCCESSFULL' | translate }}</h1>
+<div id="header" class="header">
+  <div class="row mt-2 pt-5">
+    <div class="col text-center">
+      <h1>✔</h1>
+      <h2>Zahlung erfolgreich!</h2>
+      <br>
+      <h5>Vielen Dank für Ihren Einkauf bei EventPicKing!</h5>
+    </div>
   </div>
 </div>
