--- a/src/app/components/dashboard-user/dashboard-user.component.html
+++ b/src/app/components/dashboard-user/dashboard-user.component.html
@@ -1,17 +1,17 @@
 <mdb-tabset #staticTabs [buttonClass]="'nav-tabs indigo'" [contentClass]="'card'">
-  <mdb-tab heading="Purchases">
+  <mdb-tab heading="Käufe">
     <div class="row">
       <div class="col-12">
         <br>
         <table class="table text-left">
-          <thead>
+          <thead class="thead-default">
             <tr>
               <td>#</td>
-              <td>Transaction ID</td>
-              <td>Order Date</td>
-              <td>Order Price</td>
-              <td>Order Status</td>
-              <td>View Order</td>
+              <td>Rechnungsnummer</td>
+              <td>Bestelldatum</td>
+              <td>Preis</td>
+              <td>Bestellstatus</td>
+              <td>Bestellung anzeigen</td>
             </tr>
           </thead>
           <tbody>
@@ -32,7 +32,7 @@
       </div>
     </div>
   </mdb-tab>
-  <mdb-tab heading="Profile">
+  <mdb-tab heading="Profil">
     <div class="row">
       <div class="col-12 text-left">
         <br>
@@ -197,27 +197,27 @@
           <mdb-tab heading="<i class='fa fa-credit-card'></i> Rechnung">
             <div class="row">
               <div class="col-12">
-                <!-- <div class="row text-left">
-                   <div class="col-md-4">
-                        <h4>Versandadresse</h4>
-                        <br>
-                        <p>{{ transaction.item_list.shipping_address.recipient_name }}</p>
-                        <p>{{ transaction.item_list.shipping_address.line1 }}</p>
-                        <p>{{ transaction.item_list.shipping_address.line2 }}</p>
-                        <p>{{ transaction.item_list.shipping_address.postal_code }} {{ transaction.item_list.shipping_address.city }}
-                        </p>
-                        <p>Tel: {{ transaction.item_list.shipping_address.phone }}</p>
-                      </div> -->
-                <!-- <div class="col-md-4">
-                        <h4>Kosten</h4>
-                        <br>
-                        <p>Gekaufte Artikel: {{ transaction.item_list.items.length }}</p>
-                        <p>Kosten: {{ transaction.amount.details.subtotal }}</p>
-                        <p>Versandkosten: {{ transaction.amount.details.shipping }}</p>
-                        <hr>
-                        <p>Gesamtkosten: {{ transaction.amount.total }}</p>
-                      </div>
-                </div>-->
+                <div class="row">
+                  <div class="col-4 text-left">
+                    <h4>Versandadresse</h4>
+                    <br>
+                    <p>{{ transaction.item_list.shipping_address.recipient_name }}</p>
+                    <p>{{ transaction.item_list.shipping_address.line1 }}</p>
+                    <p>{{ transaction.item_list.shipping_address.line2 }}</p>
+                    <p>{{ transaction.item_list.shipping_address.postal_code }} {{ transaction.item_list.shipping_address.city
+                      }}
+                    </p>
+                    <p>Tel: {{ transaction.item_list.shipping_address.phone }}</p>
+                  </div>
+                  <div class="col-4 text-left">
+                    <h4>Kosten</h4>
+                    <br>
+                    <p>Kosten: {{ transaction.amount.details.subtotal | number:'0.2-2' }}€</p>
+                    <p>Versandkosten: {{ transaction.amount.details.shipping | number:'0.2-2' }}€</p>
+                    <hr>
+                    <strong>Gesamtkosten: {{ transaction.amount.total | number:'0.2-2' }}€</strong>
+                  </div>
+                </div>
               </div>
             </div>
           </mdb-tab>
@@ -230,7 +230,7 @@
                     <tr>
                       <td>#</td>
                       <td>Name</td>
-                      <td>Event</td>
+                      <td>Öffnen</td>
                       <td>Download</td>
                     </tr>
                   </thead>
@@ -239,14 +239,18 @@
                       <td>{{ i + 1 }}</td>
                       <td>{{ item.name }}</td>
                       <td>
-                        <a target="_blank" [href]="item.url">Open Event</a>
+                        <a [href]="item.downloadUrl" target="_blank">
+                          <i class="fa fa-eye" aria-hidden="true"></i>
+                        </a>
                       </td>
                       <td>
-                        <a download="{{ item.name.split('/')[1] }}" [href]="item.downloadUrl" title="ImageName">Download</a>
+                        <a (click)="downloadImage(item.downloadUrl)">Download</a>
                       </td>
                     </tr>
                   </tbody>
                 </table>
+                <br>
+                <button type="button" class="btn btn-lg btn-block waves-light pink" mdbRippleRadius (click)="downloadAllImages(transaction.item_list.items)">Bilder als .zip Ordner herunterladen</button>
               </div>
             </div>
           </mdb-tab>
