--- a/src/app/pages/photographer-page/photographer-page.component.scss
+++ b/src/app/pages/photographer-page/photographer-page.component.scss
@@ -27,6 +27,14 @@
   padding: 15px;
 }
 
+.alternativeText {
+  text-align: center;
+}
+
+.author-box {
+  width: 100%;
+}
+
 .white {
   color: white;
   background-color: white;
