--- a/src/app/pages/gtcpage/gtcpage.component.html
+++ b/src/app/pages/gtcpage/gtcpage.component.html
@@ -18,7 +18,7 @@
           <br />Tel: 01775891978
           <br />E-Mail-Adresse: mytechde@outlook.com
           <br />
-          <br />Handelsregister: Amtsgericht-Stuttgart?
+          <br />Handelsregister: Amtsgericht-Stuttgart
           <br />Handelsregisternummer: B-170033
           <br />Umsatzsteuer-Identifikationsnummer: DE270638255
           <br>
