--- a/src/app/components/dashboard-photographer/dashboard-photographer.component.html
+++ b/src/app/components/dashboard-photographer/dashboard-photographer.component.html
@@ -276,41 +276,41 @@
       <div class="col-12">
         <br>
         <div *ngIf="checkDefaultPrintingHouse()">
-          <h1>Default Printing House</h1>
+          <h1>Standard Druckerei</h1>
           <div class="text-left">
             <mdb-squeezebox [multiple]="false" aria-multiselectable="true">
               <mdb-item>
-                <mdb-item-head>Adress</mdb-item-head>
+                <mdb-item-head>Adresse</mdb-item-head>
                 <mdb-item-body>
                   <form>
                     <fieldset disabled>
                       <br>
                       <div class="md-form">
-                        <input type="text" class="form-control" name="name" [(ngModel)]="defaultPrintingHouse.name">
+                        <input type="text" class="form-control" name="name" [(ngModel)]="defaultPrintingHouse.address.name">
                         <label class="active">{{ 'INPUTS.NAME' | translate }}</label>
                       </div>
 
                       <div class="md-form">
-                        <input type="text" class="form-control" name="email" [(ngModel)]="defaultPrintingHouse.email">
+                        <input type="text" class="form-control" name="email" [(ngModel)]="defaultPrintingHouse.address.email">
                         <label class="active">{{ 'INPUTS.EMAIL' | translate }}</label>
                       </div>
 
                       <div class="md-form">
-                        <input type="text" class="form-control" name="phone" [(ngModel)]="defaultPrintingHouse.phone">
+                        <input type="text" class="form-control" name="phone" [(ngModel)]="defaultPrintingHouse.address.phone">
                         <label class="active">{{ 'INPUTS.PHONE' | translate }}</label>
                       </div>
 
                       <div class="row">
                         <div class="col-md-9">
                           <div class="md-form">
-                            <input type="text" class="form-control" name="street" [(ngModel)]="defaultPrintingHouse.street">
+                            <input type="text" class="form-control" name="street" [(ngModel)]="defaultPrintingHouse.address.street">
                             <label class="active">{{ 'INPUTS.STREET' | translate }}</label>
                           </div>
                         </div>
 
                         <div class="col-md-3">
                           <div class="md-form">
-                            <input type="text" class="form-control" name="streetNumber" [(ngModel)]="defaultPrintingHouse.streetNumber">
+                            <input type="text" class="form-control" name="streetNumber" [(ngModel)]="defaultPrintingHouse.address.streetnumber">
                             <label class="active">{{ 'INPUTS.STREET_NUMBER' | translate }}</label>
                           </div>
                         </div>
@@ -319,14 +319,14 @@
                       <div class="row">
                         <div class="col-md-3">
                           <div class="md-form">
-                            <input type="text" class="form-control" name="zip" [(ngModel)]="defaultPrintingHouse.zip">
+                            <input type="text" class="form-control" name="zip" [(ngModel)]="defaultPrintingHouse.address.zip">
                             <label class="active">{{ 'INPUTS.ZIP' | translate }}</label>
                           </div>
                         </div>
 
                         <div class="col-md-9">
                           <div class="md-form">
-                            <input type="text" class="form-control" name="city" [(ngModel)]="defaultPrintingHouse.city">
+                            <input type="text" class="form-control" name="city" [(ngModel)]="defaultPrintingHouse.address.city">
                             <label class="active">{{ 'INPUTS.CITY' | translate }}</label>
                           </div>
                         </div>
@@ -336,7 +336,7 @@
                 </mdb-item-body>
               </mdb-item>
               <mdb-item>
-                <mdb-item-head>Price List</mdb-item-head>
+                <mdb-item-head>Preisliste</mdb-item-head>
                 <mdb-item-body>
                   <p>You can change the default price in the "Pricing Models" Tab.</p>
                   <div *ngIf="priceList">
@@ -373,34 +373,34 @@
               <mdb-item-head>Adress</mdb-item-head>
               <mdb-item-body>
                 <form>
-                  <fieldset disabled>
+                  <fieldset>
                     <br>
                     <div class="md-form">
-                      <input type="text" class="form-control" name="name" [(ngModel)]="ownPrintingHouse.name">
+                      <input type="text" class="form-control" name="name" [(ngModel)]="ownPrintingHouse.address.name">
                       <label class="active">{{ 'INPUTS.NAME' | translate }}</label>
                     </div>
 
                     <div class="md-form">
-                      <input type="text" class="form-control" name="email" [(ngModel)]="ownPrintingHouse.email">
+                      <input type="text" class="form-control" name="email" [(ngModel)]="ownPrintingHouse.address.email">
                       <label class="active">{{ 'INPUTS.EMAIL' | translate }}</label>
                     </div>
 
                     <div class="md-form">
-                      <input type="text" class="form-control" name="phone" [(ngModel)]="ownPrintingHouse.phone">
+                      <input type="text" class="form-control" name="phone" [(ngModel)]="ownPrintingHouse.address.phone">
                       <label class="active">{{ 'INPUTS.PHONE' | translate }}</label>
                     </div>
 
                     <div class="row">
                       <div class="col-md-9">
                         <div class="md-form">
-                          <input type="text" class="form-control" name="street" [(ngModel)]="ownPrintingHouse.street">
+                          <input type="text" class="form-control" name="street" [(ngModel)]="ownPrintingHouse.address.street">
                           <label class="active">{{ 'INPUTS.STREET' | translate }}</label>
                         </div>
                       </div>
 
                       <div class="col-md-3">
                         <div class="md-form">
-                          <input type="text" class="form-control" name="streetNumber" [(ngModel)]="ownPrintingHouse.streetNumber">
+                          <input type="text" class="form-control" name="streetNumber" [(ngModel)]="ownPrintingHouse.address.streetnumber">
                           <label class="active">{{ 'INPUTS.STREET_NUMBER' | translate }}</label>
                         </div>
                       </div>
@@ -409,14 +409,14 @@
                     <div class="row">
                       <div class="col-md-3">
                         <div class="md-form">
-                          <input type="text" class="form-control" name="zip" [(ngModel)]="ownPrintingHouse.zip">
+                          <input type="text" class="form-control" name="zip" [(ngModel)]="ownPrintingHouse.address.zip">
                           <label class="active">{{ 'INPUTS.ZIP' | translate }}</label>
                         </div>
                       </div>
 
                       <div class="col-md-9">
                         <div class="md-form">
-                          <input type="text" class="form-control" name="city" [(ngModel)]="ownPrintingHouse.city">
+                          <input type="text" class="form-control" name="city" [(ngModel)]="ownPrintingHouse.address.city">
                           <label class="active">{{ 'INPUTS.CITY' | translate }}</label>
                         </div>
                       </div>
