--- a/src/app/pages/features-page/features-page.component.html
+++ b/src/app/pages/features-page/features-page.component.html
@@ -35,7 +35,7 @@
                   Druckerei erfolgen soll.
                 </p>
 
-                <a class="btn pink ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
+                <a class="btn pink ml-0 waves-light" routerLink="/search-photographer" mdbRippleRadius>Mehr erfahren</a>
                 <br>
                 <br>
                 <br>
