Translation/CSS/Bugs

--- a/src/app/components/dashboard-user/dashboard-user.component.html
+++ b/src/app/components/dashboard-user/dashboard-user.component.html
@@ -40,7 +40,7 @@
           <mdb-squeezebox [multiple]="false" aria-multiselectable="true">
 
             <mdb-item>
-              <mdb-item-head>Contact informations</mdb-item-head>
+              <mdb-item-head>Kontaktdaten</mdb-item-head>
               <mdb-item-body>
                 <div class="md-form">
                   <input type="text" class="form-control" formControlName="name">
@@ -58,7 +58,7 @@
             </mdb-item>
 
             <mdb-item>
-              <mdb-item-head>Billing Address</mdb-item-head>
+              <mdb-item-head>Rechnungsadresse</mdb-item-head>
               <mdb-item-body formArrayName="billingAdress">
                 <div class="md-form">
                   <input type="text" class="form-control" formControlName="company">
@@ -112,7 +112,7 @@
             </mdb-item>
 
             <mdb-item>
-              <mdb-item-head>Delivery Address</mdb-item-head>
+              <mdb-item-head>Lieferadresse</mdb-item-head>
               <mdb-item-body formArrayName="deliveryAdress">
                 <div class="md-form">
                   <input type="text" class="form-control" formControlName="company">
