--- a/src/app/pages/event-search-page/event-search-page.component.scss
+++ b/src/app/pages/event-search-page/event-search-page.component.scss
@@ -23,3 +23,17 @@
 .indigo-gradient {
   background: linear-gradient(80deg, #9dafff, rgb(104, 129, 253));
 }
+
+.btn-primary {
+  background-color: #7986cb;
+}
+
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active {
+  background-color: #3f51b5 !important;
+}
+
+.btn-primary:hover {
+  background-color: #3f51b5 !important;
+}
