--- a/src/app/pages/features-page/features-page.component.html
+++ b/src/app/pages/features-page/features-page.component.html
@@ -19,8 +19,8 @@
 
               <div class="col-10 col-md-9 col-lg-10 float-right">
                 <h4 class="feature-title">Wir bringen Fotografen und Kunden zusammen</h4>
-                <p class="grey-text">Erstellen Sie ganz einfach ein Event über unser Portal und laden Sie alle Veranstaltungsbilder hoch. Durch
-                  einen Link können Sie den Nutzern einen Zugriff auf die Bilder ermöglichen.</p>
+                <p class="grey-text">Erstellen Sie ganz einfach ein Event über unser Portal und laden Sie alle Bilder des Events hoch. Durch einen
+                  Link können Sie den Nutzern einen Zugriff auf die Bilder ermöglichen.</p>
 
                 <a class="btn pink ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
                 <br>
@@ -29,10 +29,9 @@
               </div>
 
               <div class="col-10 col-md-9 col-lg-10 float-right">
-                <h4 class="feature-title">Eventfotos schnell und simpel verkaufen</h4>
+                <h4 class="feature-title">Eventbilder schnell und einfach verkaufen</h4>
                 <p class="grey-text">Die von Ihnen erstellten Fotos können Sie einfach über unser Portal an Ihre Kunden verkaufen. Sie haben die
-                  Wahl, ob dies über die Druckerei Ihres Vertrauens abgewickelt wird, oder ob die Abwicklung über unsere
-                  Druckerei erfolgen soll.
+                  Wahl, ob dies über die Druckerei Ihres Vertrauens oder unsere Hausdruckerei abgewickelt wird.
                 </p>
 
                 <a class="btn pink ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
@@ -44,9 +43,9 @@
 
               <div class="col-10 col-md-9 col-lg-10 float-right">
                 <h4 class="feature-title">Finden Sie den passenden Fotografen in Ihrer Nähe</h4>
-                <p class="grey-text">Sie suchen für Ihre Veranstaltung einen Fotograf in Ihrer Nähe? Wir bieten Ihnen die Möglichkeit über unser
-                  Portal die besten Fotografen zu finden.</p>
-                <a class="btn pink ml-0 waves-light" routerLink="/search" mdbRippleRadius>Mehr erfahren</a>
+                <p class="grey-text">Sie suchen für Ihr Event einen Fotograf in Ihrer Nähe? Wir bieten Ihnen die Möglichkeit über unser Portal
+                  die besten Fotografen zu finden.</p>
+                <a class="btn pink ml-0 waves-light" routerLink="/search-photographer" mdbRippleRadius>Mehr erfahren</a>
 
                 <br>
                 <br>
