--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -8,7 +8,7 @@
                     <br>
                     <h5>Willkommen bei ihrem Spezialisten für Event-Fotografie</h5>
                     <p>
-                        Finden Sie einen Fotografen für ihr Event, kaufen Sie schnell und bequem ihre Bilder online, oder registrieren Sie sich als
+                        Finden Sie einen Fotografen für ihr Event, kaufen Sie schnell und bequem ihre Bilder online oder registrieren Sie sich als
                         Fotograf, um für Events gebucht zu werden!
                     </p>
                     <p>
@@ -26,9 +26,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 text-center">
-                    <h1>Description</h1>
+                    <h1>{{ 'NAV.DESCRIPTION' | translate }}</h1>
                     <div class="text" style="color: grey">
-                        <p>Events ablegen, Bilder hochladen, teilen und verkaufen!</p>
+                        <p>Events anlegen, Bilder hochladen, teilen und verkaufen!</p>
                         <p>Verkaufen Sie Ihre Fotos schnell über unser Portal. Wir kümmern uns sowohl um Zahlungsabwicklung,
                             Produktion als auch Versand.</p>
                         <p>Sie schießen die Bilder - wir machen den Rest!</p>
@@ -45,7 +45,7 @@
         <div class="container">
             <h2>{{'TEXTS.LANDING_BESTPICTURES' | translate}}</h2>
             <p class="text-center">
-                Professionelle Bilder von professionellen Fotografen. Finden auch sie den perfekten Fotografen für Ihr Event!
+                Professionelle Bilder von professionellen Fotografen. Finden auch Sie den perfekten Fotografen für Ihr Event!
             </p>
         </div>
         <!-- end-container -->
