--- a/src/app/components/dashboard-photographer/dashboard-photographer.component.html
+++ b/src/app/components/dashboard-photographer/dashboard-photographer.component.html
@@ -34,7 +34,7 @@
         <!--Section: Pricing v.1-->
         <section class="section pb-3">
           <!--Section heading-->
-          <h1>Our pricing plans</h1>
+          <h1>Unsere Abonnements</h1>
           <br>
           <br>
 
@@ -58,19 +58,19 @@
                   <ul>
                     <li>
                       <p>
-                        <i class="fa fa-check"></i> 15 Events</p>
+                        <i class="fa fa-check"></i>15 Events pro Monat</p>
                     </li>
                     <li>
                       <p>
-                        <i class="fa fa-check"></i> No storage limitation</p>
+                        <i class="fa fa-check"></i>Kein Speicherlimit</p>
                     </li>
                     <li>
                       <p>
-                        <i class="fa fa-check"></i> 10% provision</p>
+                        <i class="fa fa-check"></i>10% Provision</p>
                     </li>
                   </ul>
 
-                  <button class="btn pink waves-light" mdbRippleRadius>Upgrade</button>
+                  <button class="btn pink waves-light" mdbRippleRadius>Abo abschließen</button>
                 </div>
                 <!--/.Features-->
 
@@ -94,19 +94,19 @@
                   <ul>
                     <li>
                       <p>
-                        <i class="fa fa-check"></i> 25 Events</p>
+                        <i class="fa fa-check"></i>25 Events pro Monat</p>
                     </li>
                     <li>
                       <p>
-                        <i class="fa fa-check"></i> No storage limitation</p>
+                        <i class="fa fa-check"></i>Kein Speicherlimit</p>
                     </li>
                     <li>
                       <p>
-                        <i class="fa fa-check"></i> 10% provision</p>
+                        <i class="fa fa-check"></i>10% Provision</p>
                     </li>
                   </ul>
 
-                  <button class="btn pink waves-light" mdbRippleRadius>Upgrade</button>
+                  <button class="btn pink waves-light" mdbRippleRadius>Abo abschließen</button>
                 </div>
                 <!--/.Features-->
 
@@ -119,7 +119,7 @@
                 <div class="price header indigo indigo-gradient">
                   <h1>50</h1>
                   <div class="version indigo-gradient">
-                    <h5>Pro</h5>
+                    <h5>Professional</h5>
                   </div>
                 </div>
                 <!--/.Price-->
@@ -129,19 +129,19 @@
                   <ul>
                     <li>
                       <p>
-                        <i class="fa fa-check"></i> 50 Events</p>
+                        <i class="fa fa-check"></i>50 Events pro Monat</p>
                     </li>
                     <li>
                       <p>
-                        <i class="fa fa-check"></i> No storage limitation</p>
+                        <i class="fa fa-check"></i>Kein Speicherlimit</p>
                     </li>
                     <li>
                       <p>
-                        <i class="fa fa-check"></i> 10% provision</p>
+                        <i class="fa fa-check"></i>10% Provision</p>
                     </li>
                   </ul>
 
-                  <button class="btn pink waves-light" mdbRippleRadius>Upgrade</button>
+                  <button class="btn pink waves-light" mdbRippleRadius>Abo abschließen</button>
                 </div>
                 <!--/.Features-->
 
@@ -169,10 +169,10 @@
                 <table class="table text-left" *ngIf="priceList">
                   <thead class="thead-default">
                     <tr>
-                      <th scope="row">Article</th>
-                      <th>Minimal price</th>
-                      <th>Your price</th>
-                      <th>Your profit ( -10% Provision)</th>
+                      <th scope="row">Artikel</th>
+                      <th>Minimaler Preis</th>
+                      <th>Ihr Preis</th>
+                      <th>Ihre Provision (abz&uuml;glich -10%)</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -190,7 +190,7 @@
             </div>
           </mdb-tab>
 
-          <mdb-tab heading="<i class='fa fa-print'></i> Printing House">
+          <mdb-tab heading="<i class='fa fa-print'></i> Druckerei">
             <div class="row">
               <div class="col-12">
                 <br>
@@ -202,11 +202,11 @@
                         <table class="table text-left">
                           <thead class="thead-default">
                             <tr>
-                              <th scope="row">Article</th>
+                              <th scope="row">Artikel</th>
                               <th>Format</th>
-                              <th>Minimal price</th>
-                              <th>Your price</th>
-                              <th>Your profit ( -10% Provision)</th>
+                              <th>Minimaler Preis</th>
+                              <th>Ihr Preis</th>
+                              <th>Ihre Provision (abz&uuml;glich -10%)</th>
                             </tr>
                           </thead>
                           <tbody>
@@ -231,10 +231,10 @@
                         <table class="table text-left">
                           <thead class="thead-default">
                             <tr>
-                              <th scope="row">Article</th>
+                              <th scope="row">Artikel</th>
                               <th>Format</th>
-                              <th>Your price</th>
-                              <th>Your profit ( -10% Provision)</th>
+                              <th>Ihr Preis</th>
+                              <th>Ihre Provision (abz&uuml;glich -10%)</th>
                             </tr>
                           </thead>
                           <tbody>
@@ -258,11 +258,10 @@
 
         </mdb-tabset>
 
-        <br>
         <div class="row no-gutters justify-content-start" style="align-items: center">
           <div class="col-4"></div>
           <div class="col-4">
-            <button type="button" class="btn btn-lg btn-block waves-light pink" mdbRippleRadius (click)="updatePriceList()">Save</button>
+            <button type="button" class="btn btn-lg btn-block waves-light pink" mdbRippleRadius (click)="updatePriceList()">&Auml;nderungen speichern</button>
           </div>
           <div class="col-4"></div>
         </div>
@@ -276,11 +275,11 @@
       <div class="col-12">
         <br>
         <div *ngIf="checkDefaultPrintingHouse()">
-          <h1>Default Printing House</h1>
+          <h1>Eigene Druckerei anlegen</h1>
           <div class="text-left">
             <mdb-squeezebox [multiple]="false" aria-multiselectable="true">
               <mdb-item>
-                <mdb-item-head>Adress</mdb-item-head>
+                <mdb-item-head>Adresse</mdb-item-head>
                 <mdb-item-body>
                   <form>
                     <fieldset disabled>
@@ -336,18 +335,18 @@
                 </mdb-item-body>
               </mdb-item>
               <mdb-item>
-                <mdb-item-head>Price List</mdb-item-head>
+                <mdb-item-head>Preisliste</mdb-item-head>
                 <mdb-item-body>
-                  <p>You can change the default price in the "Pricing Models" Tab.</p>
+                  <p>Sie können die Standardpreise unter dem Tab "Preismodelle" &auml;ndern.</p>
                   <div *ngIf="priceList">
                     <div *ngFor="let item of priceList.printingHouseItems">
                       <h1>{{ item.name }}</h1>
                       <table class="table text-left">
                         <thead class="thead-default">
                           <tr>
-                            <th scope="row">Article</th>
+                            <th scope="row">Artikel</th>
                             <th>Format</th>
-                            <th>Minimal price</th>
+                            <th>Minimaler Preis</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -364,13 +363,22 @@
               </mdb-item>
             </mdb-squeezebox>
           </div>
-          <button type="button" class="btn btn-lg btn-block waves-light indigo" mdbRippleRadius (click)="createPrintingHouse()">Create own printing house</button>
+
+          <br>
+          <div class="row no-gutters justify-content-start" style="align-items: center">
+            <div class="col-4"></div>
+            <div class="col-4">
+              <button type="button" class="btn btn-lg btn-block waves-light pink" mdbRippleRadius (click)="createPrintingHouse()">Eigene Druckerei speichern</button>
+            </div>
+            <div class="col-4"></div>
+          </div>
+
         </div>
         <div *ngIf="ownPrintingHouse">
-          <h1>Own Printing House</h1>
+          <h1>Eigene Druckerei</h1>
           <mdb-squeezebox [multiple]="false" aria-multiselectable="true" class="text-left">
             <mdb-item>
-              <mdb-item-head>Adress</mdb-item-head>
+              <mdb-item-head>Adresse</mdb-item-head>
               <mdb-item-body>
                 <form>
                   <fieldset disabled>
@@ -426,7 +434,7 @@
               </mdb-item-body>
             </mdb-item>
             <mdb-item>
-              <mdb-item-head>Billing Information</mdb-item-head>
+              <mdb-item-head>Rechnungsdaten</mdb-item-head>
               <mdb-item-body>
                 <br>
                 <form>
@@ -448,18 +456,18 @@
               </mdb-item-body>
             </mdb-item>
             <mdb-item class="text-left">
-              <mdb-item-head>Price List</mdb-item-head>
+              <mdb-item-head>Preisliste</mdb-item-head>
               <mdb-item-body>
-                <p>You can change the default price in the "Pricing Models" Tab.</p>
+                <p>Sie können die Standardpreise unter dem Tab "Preismodelle" &auml;ndern.</p>
                 <div *ngIf="priceList">
                   <div *ngFor="let item of priceList.printingHouseItems">
                     <h1>{{ item.name }}</h1>
                     <table class="table text-left">
                       <thead class="thead-default">
                         <tr>
-                          <th scope="row">Article</th>
+                          <th scope="row">Artikel</th>
                           <th>Format</th>
-                          <th>Your price</th>
+                          <th>Ihr Preis</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -480,7 +488,7 @@
           <div class="row no-gutters justify-content-start" style="align-items: center">
             <div class="col-4"></div>
             <div class="col-4">
-              <button type="button" class="btn btn-lg btn-block waves-light pink" mdbRippleRadius (click)="updatePrintingHouse()">Update printing house</button>
+              <button type="button" class="btn btn-lg btn-block waves-light pink" mdbRippleRadius (click)="updatePrintingHouse()">Eigene Druckerei speichern</button>
             </div>
             <div class="col-4"></div>
           </div>
@@ -685,14 +693,14 @@
   <div class="modal-dialog modal-notify modal-danger" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <p class="heading lead">Your profile is not validated!</p>
+        <p class="heading lead">Ihr Profil ist nicht validiert!</p>
       </div>
       <div class="modal-body">
         <div class="text-center">
           <i class="fa fa-exclamation-triangle fa-4x mb-3 animated rotateIn"></i>
-          <p>Please validate your account by sending your trade translucent to
-            <a href="mailto:validate@eventpicking.de">validate@eventpicking.de</a>.
-            <br> After we validated your account you are able to create and sell events.</p>
+          <p>Bitte validieren Sie Ihren Account, indem Sie uns Ihre Handelsregistereintragung an
+            <a href="mailto:validate@eventpicking.de">validate@eventpicking.de</a> senden.
+            <br> Nachdem wir Ihren Account validiert haben können Sie Events anlegen und Bilder daraus verkaufen.</p>
         </div>
       </div>
       <div class="modal-footer justify-content-center">
@@ -708,12 +716,13 @@
   <div class="modal-dialog modal-notify modal-danger" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <p class="heading lead">Event limit reached</p>
+        <p class="heading lead">Limit der monatlichen Events erreicht!</p>
       </div>
       <div class="modal-body">
         <div class="text-center">
           <i class="fa fa-exclamation-triangle fa-4x mb-3 animated rotateIn"></i>
-          <p>You reached your event limit! Please upgrade to one of our premium plans to create more events or delete one.</p>
+          <p>Sie haben Ihr monatliches Limit an Events erreicht! Bitte schließen Sie ein höherwertiges Abonnement ab, um neue
+            Events anzulegen. Alternativ können Sie andere Events l&ouml;schen.</p>
         </div>
       </div>
       <div class="modal-footer justify-content-center">
