--- a/src/app/pages/photographer-page/photographer-page.component.html
+++ b/src/app/pages/photographer-page/photographer-page.component.html
@@ -71,7 +71,7 @@
 
           <div class="card card-cascade wider ">
 
-            <div class="view gradient-card-header peach-gradient ">
+            <div class="view gradient-card-header indigo-gradient ">
               <h2 class="h2-responsive mb-2 ">
                 <i *ngIf="!event?.public" class="fa fa-lock"></i> {{event.name}}</h2>
               <p>
@@ -83,7 +83,7 @@
               <p class="card-text mr-2 ml-2 ">{{event.description}}</p>
 
               <a [routerLink]="[ '/event', event.id] " class="orange-text mt-1 d-flex flex-row-reverse ">
-                <h5 class="waves-effect p-2 " mdbRippleRadius>View Pictures
+                <h5 class="waves-effect p-2 " mdbRippleRadius>Bilder ansehen
                   <i class="fa fa-chevron-right "></i>
                 </h5>
               </a>
@@ -156,8 +156,8 @@
           <!--col1-->
           <div class="col-9">
             <h4 class="mb-3">Lena A.</h4>
-            <p>Unsere Hochzeit wurde durch Max Mustermann unvergesslich! Er hat großartige Bilder von uns und unseren Gästen
-              gemacht und war pünktlich an unserem großen Tag da.
+            <p>Unsere Hochzeit wurde durch Leon Fink unvergesslich! Er hat großartige Bilder von uns und unseren Gästen gemacht
+              und war pünktlich an unserem großen Tag da.
             </p>
           </div>
           <!--col2-->
@@ -179,9 +179,9 @@
           <!--col1-->
           <div class="col-9">
             <h4 class="mb-3">Nadja B.</h4>
-            <p>Die Bilder die Max Mustermann von unserer Familienfeier gemacht hat werden für immer im Gedächnis bleiben und
-              auch seine freundliche und sehr höfliche Art werde ich auf jeden Fall nicht vergessen! Ich werde ihn nächstes
-              Mal wieder buchen!
+            <p>Die Bilder die Leon Fink von unserer Familienfeier gemacht hat werden für immer im Gedächtnis bleiben und auch
+              seine freundliche und sehr höfliche Art werde ich auf jeden Fall nicht vergessen! Ich werde ihn nächstes Mal
+              wieder buchen!
             </p>
           </div>
           <!--col2-->
@@ -203,8 +203,8 @@
           <!--col1-->
           <div class="col-9">
             <h4 class="mb-3">Martin N.</h4>
-            <p>Überragende Bilder zu einem top Preis-Leistungsverhältnis! Wir habenMax bereits für mehrere Veranstaltungen gebucht
-              und waren jedes Mal sehr zufrieden.
+            <p>Überragende Bilder zu einem top Preis-Leistungsverhältnis! Wir haben Leon bereits für mehrere Veranstaltungen
+              gebucht und waren jedes Mal sehr zufrieden.
             </p>
           </div>
           <!--col2-->
@@ -309,7 +309,7 @@
               <div class="form-group">
                 <textarea class="form-control" id="inputRating" rows="10" placeholder="Schreiben sie hier Ihre Bewertung"></textarea>
               </div>
-              <small id="giveOk" class="form-text text-muted">Einverständnis, dass Kommentar auf Seite erscheint.</small>
+              <small id="giveOk" class="form-text text-muted">Ich bin einverstanden, dass mein Name und mein Kommentar auf dieser Seite erscheint.</small>
             </form>
           </div>
           <!--col-->
@@ -422,7 +422,7 @@
               <p class="card-text mr-2 ml-2 ">{{event.description}}</p>
 
               <a [routerLink]="[ '/event', event.id] " class="pink-text mt-1 d-flex flex-row-reverse ">
-                <h5 class="waves-effect p-2 " mdbRippleRadius>View Pictures
+                <h5 class="waves-effect p-2 " mdbRippleRadius>Bilder ansehen
                   <i class="fa fa-chevron-right "></i>
                 </h5>
               </a>
