--- a/src/app/components/dashboard-photographer/dashboard-photographer.component.html
+++ b/src/app/components/dashboard-photographer/dashboard-photographer.component.html
@@ -22,6 +22,40 @@
     <div class="row">
       <div class="col-12">
         <br>
+        <h1>Gesamtumsatz:
+          <span class="light-green-text">1000€</span>
+        </h1>
+        <hr>
+        <table class="table text-left">
+          <thead class="thead-default">
+            <tr>
+              <td>#</td>
+              <td>Rechnungsnummer</td>
+              <td>Bestelldatum</td>
+              <td>Umsatz</td>
+              <td>Gewinn</td>
+              <td>Bestellstatus</td>
+              <td>Bestellung anzeigen</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let transaction of (transactions | async); let i = index">
+              <td>{{ i + 1 }}</td>
+              <td>{{ transaction.invoice_number }}</td>
+              <td>{{ transaction.date | date }}</td>
+              <td>{{ transaction.amount.total | number:'0.2-2' }} €</td>
+              <td>
+                <strong>{{ (transaction.amount.details.subtotal * 0.9) | number:'0.2-2' }} €</strong>
+              </td>
+              <td>{{ transaction.status | uppercase }}</td>
+              <td>
+                <a (click)="openTransaction(transaction)" *ngIf="transaction.status === 'available'">
+                  <i class="fa fa-eye fa-lg" aria-hidden="true"></i>
+                </a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </mdb-tab>
@@ -719,6 +753,31 @@
       <div class="modal-footer justify-content-center">
         <a type="button" class="btn btn-primary-modal waves-light" mdbRippleRadius (click)="eventLimitModal.hide()">Got it!
         </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div mdbModal #transactionModal="mdb-modal" class="modal fade" id="transactionModal" tabindex="-1" role="dialog" aria-labelledby="transactionModal"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content" *ngIf="transaction">
+      <div class="modal-header indigo">
+        <h4 class="modal-title w-100 text-white" id="myModalLabel">Order: {{ transaction.invoice_number }}</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="transactionModal.hide()">
+          <span aria-hidden="true" class="text-white">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <mdb-tabset #staticTabs [buttonClass]="'nav-tabs indigo'" [contentClass]="''">
+          <mdb-tab heading="<i class='fa fa-credit-card'></i> Rechnung">
+            <div class="row">
+              <div class="col-12">
+                <br>
+              </div>
+            </div>
+          </mdb-tab>
+        </mdb-tabset>
       </div>
     </div>
   </div>
