--- a/src/app/pages/event-search-page/event-search-page.component.html
+++ b/src/app/pages/event-search-page/event-search-page.component.html
@@ -43,7 +43,7 @@
               <p class="card-text mr-2 ml-2">{{event.description}}</p>
 
               <a [routerLink]="[ '/event', event.id]" class="pink-text mt-1 d-flex flex-row-reverse">
-                <h5 class="waves-effect p-2" mdbRippleRadius>View Pictures
+                <h5 class="waves-effect p-2" mdbRippleRadius>Gehe zu Event
                   <i class="fa fa-chevron-right"></i>
                 </h5>
               </a>
@@ -73,7 +73,7 @@
 
             <div class="view gradient-card-header indigo-gradient">
               <h2 class="h2-responsive mb-2">
-                <i *ngIf="!event?.public" class="fa fa-lock"></i> {{event.name}}</h2>
+                <!-- <i *ngIf="!event?.public" class="fa fa-lock"></i> -->{{event.name}}</h2>
               <p>
                 <i class="fa fa-calendar"></i>&nbsp;{{event.date}}</p>
 
@@ -83,7 +83,7 @@
               <p class="card-text mr-2 ml-2">{{event.description}}</p>
 
               <a [routerLink]="[ '/event', event.id]" class="pink-text mt-1 d-flex flex-row-reverse">
-                <h5 class="waves-effect p-2" mdbRippleRadius>View Pictures
+                <h5 class="waves-effect p-2" mdbRippleRadius>Gehe zu Event
                   <i class="fa fa-chevron-right"></i>
                 </h5>
               </a>
