--- a/src/app/pages/checkout-page/checkout-page.component.html
+++ b/src/app/pages/checkout-page/checkout-page.component.html
@@ -177,8 +177,8 @@
       <div class="row">
         <div class="col-12">
           <br> Indem Sie Ihre Bestellung aufgeben, akzeptieren Sie unsere
-          <a target="_blank" href="./gtc">Allgemeinen Geschäftsbedingungen</a> und unsere
-          <a target="_blank" href="./data-protection">Datenschutzrichtlinie</a>.
+          <a class="pink-text" target="_blank" href="./gtc">Allgemeinen Geschäftsbedingungen</a> und unsere
+          <a class="pink-text" target="_blank" href="./data-protection">Datenschutzrichtlinie</a>.
           <br>
         </div>
         <!--col-->
