--- a/src/app/components/event-photographer/event-photographer.component.html
+++ b/src/app/components/event-photographer/event-photographer.component.html
@@ -42,13 +42,13 @@
 
         <br>
         <br>
-          <div class="row no-gutters justify-content-start" style="align-items: center">
-            <div class="col-4"></div>
-            <div class="col-4">
-              <button type="button" class="btn pink btn-lg btn-block waves-light" mdbRippleRadius (click)="startUpload()">{{ 'BUTTONS.START_UPLOAD' | translate }}</button>
-            </div>
-            <div class="col-4"></div>
+        <div class="row no-gutters justify-content-start" style="align-items: center">
+          <div class="col-4"></div>
+          <div class="col-4">
+            <button type="button" class="btn pink btn-lg btn-block waves-light" mdbRippleRadius (click)="startUpload()">{{ 'BUTTONS.START_UPLOAD' | translate }}</button>
           </div>
+          <div class="col-4"></div>
+        </div>
         <br>
 
         <div class="table-responsive text-left">
@@ -121,7 +121,7 @@
           <div class="row no-gutters justify-content-start" style="align-items: center">
             <div class="col-4"></div>
             <div class="col-4">
-              <button type="submit" class="btn indigo btn-lg btn-block waves-light" mdbRippleRadius (click)="updateEvent()">{{ 'BUTTONS.UPDATE_EVENT' | translate }}</button>
+              <button type="submit" class="btn pink btn-lg btn-block waves-light" mdbRippleRadius (click)="updateEvent()">{{ 'BUTTONS.UPDATE_EVENT' | translate }}</button>
             </div>
             <div class="col-4"></div>
           </div>
