--- a/src/app/pages/photographer-page/photographer-page.component.html
+++ b/src/app/pages/photographer-page/photographer-page.component.html
@@ -73,7 +73,7 @@
 
             <div class="view gradient-card-header indigo-gradient ">
               <h2 class="h2-responsive mb-2 ">
-                <i *ngIf="!event?.public" class="fa fa-lock"></i> {{event.name}}</h2>
+                <!-- <i *ngIf="!event?.public" class="fa fa-lock"></i> -->{{event.name}}</h2>
               <p>
                 <i class="fa fa-calendar "></i>&nbsp;{{event.date}}</p>
 
@@ -82,7 +82,7 @@
 
               <p class="card-text mr-2 ml-2 ">{{event.description}}</p>
 
-              <a [routerLink]="[ '/event', event.id] " class="orange-text mt-1 d-flex flex-row-reverse ">
+              <a [routerLink]="[ '/event', event.id] " class="pink-text mt-1 d-flex flex-row-reverse ">
                 <h5 class="waves-effect p-2 " mdbRippleRadius>Bilder ansehen
                   <i class="fa fa-chevron-right "></i>
                 </h5>
@@ -218,7 +218,7 @@
       <hr class="white">
       <div class="container">
         <br>
-        <h5 class="rating text-center">Bewerten sie hier Ihren Forografen:</h5>
+        <h5 class="rating text-center">Bewerten Sie hier Ihren Fotografen:</h5>
         <br>
         <br>
 
@@ -307,7 +307,7 @@
           <div class="col-9">
             <form>
               <div class="form-group">
-                <textarea class="form-control" id="inputRating" rows="10" placeholder="Schreiben sie hier Ihre Bewertung"></textarea>
+                <textarea class="form-control" id="inputRating" rows="10" placeholder="Schreiben Sie hier Ihre Bewertung"></textarea>
               </div>
               <small id="giveOk" class="form-text text-muted">Ich bin einverstanden, dass mein Name und mein Kommentar auf dieser Seite erscheint.</small>
             </form>
@@ -319,7 +319,7 @@
         <div class="row justify-content-end">
           <div class="col-3 offset-1">
             <!-- <div class="row justify-content-end" style="margin-left:10px"> -->
-            <button id="submitRating" class="btn btn-unique">{{'BUTTONS.SUBMIT'|translate}}
+            <button id="submitRating" class="btn pink">{{'BUTTONS.SUBMIT'|translate}}
               <i class="fa fa-paper-plane-o ml-1"></i>
             </button>
           </div>
