--- a/src/app/components/dashboard-event-card/dashboard-event-card.component.html
+++ b/src/app/components/dashboard-event-card/dashboard-event-card.component.html
@@ -39,7 +39,7 @@
 
   <!--Card content-->
   <div class="card-body">
-    <h3 class="text-danger">Event deleted
+    <h3 class="text-danger">Event wurde gelöscht
     </h3>
   </div>
   <!-- /Card content-->
